--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/style.css
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/style.css
@@ -12,11 +12,19 @@ div.content {
     color: #d7d7d7;
 }
 
-div.content p, li, td {
+div.content p,
+div.content li,
+div.content td {
     font: 12px/1.385 Verdana;
 }
 
-div.content h1, h2, h3, h4, h5, h6, label {
+div.content h1,
+div.content h2, 
+div.content h3,
+div.content h4,
+div.content h5,
+div.content h6,
+div.content label {
     font-family: "Bebas Neue", "Trebuchet MS", Verdana, sans-serif;
     font-weight: normal;
     color: #00aaff;
@@ -73,7 +81,8 @@ div.account-form {
     margin-right: auto;
 }
 
-div.account-form input, button {
+div.account-form input,
+div.account-form button {
     width: 100%;
     box-sizing: border-box;
 }
